server/compilers/goLiteJS/src/test/ml2/invalid/func5.go
// return value does not type check
package main

func f() int {
    return 23.0
}

func main() {
    f()
}
